--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/stockListFragment"
-        android:name="com.graduation_work.bonappetit.ui.StockListFragment"
+        android:name="com.graduation_work.bonappetit.ui.fragment.StockListFragment"
         android:label="stock_list_fragment"
         tools:layout="@layout/stock_list_fragment" >
     </fragment>
