--- a/app/src/main/res/layout/stock_list_fragment.xml
+++ b/app/src/main/res/layout/stock_list_fragment.xml
@@ -23,20 +23,24 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
-                android:hint="@string/stock_list_search_by_name_et" />
+                android:hint="@string/stock_list_search_by_name_et"
+                android:text="@={viewModel.targetName}"
+                android:afterTextChanged="@{() -> viewModel.updateSearchBtnStatus()}" />
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.3"
                 android:text="@string/stock_list_search_by_name_exec_btn"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:onClick="@{() -> viewModel.searchStock()}"
+                android:enabled="@{viewModel.isSearchByNameEnable()}" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/stock_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="300dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
