--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/food_name_stock_item"
+            android:id="@+id/food_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{stock.foodName}" />
