--- a/app/src/main/res/layout/stock_list_fragment.xml
+++ b/app/src/main/res/layout/stock_list_fragment.xml
@@ -30,11 +30,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/stock_list_rv"
             android:layout_width="match_parent"
-            android:layout_height="300dp" />
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center|bottom"
             android:orientation="horizontal">
 
             <Button
