絞り込みのダイアログ実装した。ViewModelの生成方法がsingleなのが気になる。あとFragmentのwhenのelse何とかしたい。

--- a/app/src/main/res/layout/stock_manager_fragment.xml
+++ b/app/src/main/res/layout/stock_manager_fragment.xml
@@ -38,17 +38,21 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/search_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/stock_list_search_btn" />
+                android:text="@{viewModel.searchBtnText}"
+                android:onClick="@{() -> viewModel.onSearchBtnClick()}"/>
 
             <Button
+                android:id="@+id/sort_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.sortBtnText.text}"
-                android:onClick="@{() -> viewModel.onSortBtnTap()}"/>
+                android:text="@{viewModel.sortBtnText}"
+                android:onClick="@{() -> viewModel.onSortBtnClick()}"/>
 
             <Button
+                android:id="@+id/register_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/stock_list_register_btn" />
