在庫登録画面作成中。UseCaseまで作った。

--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -20,19 +20,21 @@
             android:id="@+id/food_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{stock.foodName}" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{Long.toString(stock.id)}" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{stock.category}" />
+            android:text="@{stock.food.name}" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{Integer.toString(stock.count) + stock.unit}" />
+            android:text="@{Long.toString(stock.id)}" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{stock.food.category}" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{Integer.toString(stock.count) + stock.food.unit}" />
     </LinearLayout>
 </layout>
