--- a/app/src/main/res/layout/stock_manager.xml
+++ b/app/src/main/res/layout/stock_manager.xml
@@ -13,6 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <TextView
+            android:text="@string/sm_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,7 +27,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
-                android:hint="@string/stock_list_search_by_name_et"
+                android:hint="@string/sm_search_by_name_hint"
                 android:text="@={viewModel.searchString}" />
         </LinearLayout>
 
@@ -55,7 +59,8 @@
                 android:id="@+id/register_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/stock_list_register_btn" />
+                android:text="@string/sm_register"
+                android:onClick="@{() -> viewModel.onRegisterBtnClick()}"/>
         </LinearLayout>
     </LinearLayout>
 </layout>
