リファクタリング終了　在庫登録画面作成中

--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -25,7 +25,7 @@
             <EditText
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/stock_register_input_num"
+                android:hint="@string/sr_input_num"
                 android:inputType="number" />
 
             <TextView
