リファクタリング

--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -26,7 +26,9 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/sr_input_num"
-                android:inputType="number" />
+                android:inputType="number"
+                android:text="@={viewModel.foodCount}"
+                android:enabled="@{viewModel.isFoodCountInputEnable()}"/>
 
             <TextView
                 android:layout_width="50dp"
