--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -40,5 +40,11 @@
             android:layout_width="300dp"
             android:layout_height="150dp"
             android:focusable="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/sr_register"
+            android:onClick="@{() -> viewModel.onRegisterBtnClick()}" />
     </LinearLayout>
 </layout>
