--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -35,6 +35,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{Integer.toString(stock.count) + stock.food.unit}" />
+            android:text="@{Integer.toString(stock.quantity) + stock.food.unit}" />
     </LinearLayout>
 </layout>
