--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -53,15 +53,30 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.1"
-            android:text="@string/sr_date"
-            android:focusable="true"
+            android:text="@{viewModel.limitText}"
+            android:focusable="@{viewModel.isLimitSelectorEnable()}"
             android:onClick="@{() -> viewModel.onDatePickerClick()}"/>
 
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.1"
-            android:hint="@string/sr_register"
-            android:onClick="@{() -> viewModel.onRegisterBtnClick()}" />
+            android:gravity="right"
+            android:orientation="horizontal" >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd = "20dp"
+                android:hint="@string/sr_cancel"
+                android:onClick="@{() -> viewModel.onCancelBtnClick()}" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd = "20dp"
+                android:hint="@string/sr_register"
+                android:onClick="@{() -> viewModel.onRegisterBtnClick()}" />
+        </LinearLayout>
     </LinearLayout>
 </layout>
