--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -10,7 +10,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="食材登録" />
 
         <Spinner
             android:id="@+id/food_selector_spn"
@@ -22,7 +27,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.6"
+            android:layout_weight="0.1"
             android:orientation="horizontal">
 
             <!-- idに_つけるとResources linking failedて言われる誰か理由知ってたら教えて -->
