--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.05"
-            android:text="かりおき" />
+            android:text="@{viewModel.currentStockText}" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,7 +85,8 @@
             android:layout_weight="0.5"
             android:gravity="top"
             android:background="@drawable/border"
-            android:hint="備考" />
+            android:hint="@string/sr_note"
+            android:text="@={viewModel.note}"/>
 
         <LinearLayout
             android:layout_width="match_parent"
