食材管理画面から食材詳細画面への画面遷移を実装した。ui.fragment.dialogのCategorySelectDFragmentを削除し、StockManagerFragmentに絞り込みダイアログを生成する処理を追加した。

--- a/app/src/main/res/layout/stock_list_item.xml
+++ b/app/src/main/res/layout/stock_list_item.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/border" >
+        android:background="@drawable/border"
+        android:onClick="@{() -> viewModel.onStockItemClick(stock)}">
 
         <TextView
             android:id="@+id/food_name_tv"
