チャートデータが存在しない時の振る舞いを修正

--- a/app/src/main/res/layout/consumption_history_fragment.xml
+++ b/app/src/main/res/layout/consumption_history_fragment.xml
@@ -29,6 +29,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/consumedStockListCardView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -38,11 +39,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/consumptionCardView">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/consumedStockList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/consumedStockList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
             </androidx.cardview.widget.CardView>
 
