--- a/app/src/main/res/layout/wasted_history_fragment.xml
+++ b/app/src/main/res/layout/wasted_history_fragment.xml
@@ -29,6 +29,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/wastedStockListCardView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
