--- a/app/src/main/res/drawable/editable_area.xml
+++ b/app/src/main/res/drawable/editable_area.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke
-        android:width="2dp"
-        android:color="#FFFFCC" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:left="3.5dp" android:top="3.5dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#66404040" />
+            <corners android:radius="20dp" />
+        </shape>
+    </item>
 
-    <solid android:color="@color/white" />
-</shape>
+    <item android:bottom="3.5dp" android:right="3.5dp">
+        <shape>
+            <solid android:color="@color/white" />
+            <corners android:radius="20dp" />
+        </shape>
+    </item>
+</layer-list>
