--- a/app/src/main/res/layout/stock_manager.xml
+++ b/app/src/main/res/layout/stock_manager.xml
@@ -19,12 +19,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="@string/sm_title" />
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
+            android:textColor="@color/black"
+            android:theme="@style/EditTextStyle"
             android:hint="@string/sm_search_by_name_hint"
+            android:textColorHint="@color/black"
             android:text="@={viewModel.searchString}" />
 
 
