--- a/app/src/main/res/layout/stock_register.xml
+++ b/app/src/main/res/layout/stock_register.xml
@@ -16,7 +16,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="食材登録" />
+            android:text="食材登録"
+            android:textColor="@color/black"/>
 
         <Spinner
             android:id="@+id/food_selector_spn"
@@ -27,6 +28,7 @@
 
         <TextView
             android:layout_width="match_parent"
+            android:textColor="@color/black"
             android:layout_height="0dp"
             android:layout_weight="0.05"
             android:text="@{viewModel.currentStockText}" />
@@ -38,17 +40,20 @@
             android:orientation="horizontal">
 
             <EditText
+                android:textColor="@color/black"
                 android:id="@+id/quantityInputEt"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.8"
                 android:gravity="bottom"
                 android:hint="@string/sr_input_num"
+                android:textColorHint="@color/black"
                 android:text="@={viewModel.quantityStr}"
                 android:inputType="number"
                 android:enabled="@{viewModel.isQuantityInputEnable()}" />
 
             <TextView
+                android:textColor="@color/black"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
@@ -68,6 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.1"
+                android:textColor="@color/black"
                 android:text="@{viewModel.limitType}" />
 
             <TextView
@@ -75,6 +81,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.2"
                 android:text="@{viewModel.limitText}"
+                android:textColor="@color/black"
                 android:focusable="@{viewModel.isLimitSelectorEnable()}"
                 android:onClick="@{() -> viewModel.onDatePickerClick()}"/>
         </LinearLayout>
@@ -83,6 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:gravity="top"
             android:background="@drawable/border"
             android:hint="@string/sr_note"
