--- a/app/src/main/res/layout/stock_list_for_history_item.xml
+++ b/app/src/main/res/layout/stock_list_for_history_item.xml
@@ -22,7 +22,9 @@
             android:id="@+id/limit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:layout_constraintBottom_toTopOf="@id/consumptionDate"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,11 +35,22 @@
             android:id="@+id/consumptionDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/divider"
             app:layout_constraintEnd_toEndOf="@+id/limit"
             app:layout_constraintStart_toStartOf="@+id/limit"
             app:layout_constraintTop_toBottomOf="@+id/limit"
             tools:text="消費" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/consumptionDate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
